# the-well-maintained-test

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  bump-version.py  contributing.md  example_auth.json  justfile  noxfile.py  pyproject.toml  questions.json  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml  test.yml
src/tests/: test_classes.py  test_the_well_maintained_test.py
src/the_well_maintained_test/: _version.py  cli.py  headers.py  helpers.py  styles.py  utils.py
src/the_well_maintained_test/data/: questions.json  questions.toml  urls.toml
tests/: test_classes.py  test_the_well_maintained_test.py
the_well_maintained_test/: cli.py  utils.py
